# rust-vst3-host

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LIBRARY_DESIGN.md  README.md  README_LIBRARY.md  ROADMAP.md  TODO.md  deny.toml  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/explanation/: architecture.md  audio-processing.md  process-isolation.md  threading.md  vst3-primer.md
docs/how-to/: control-parameters.md  custom-audio-backend.md  discover-plugins.md  isolate-plugin-crashes.md  monitor-audio-levels.md  open-plugin-editor.md  play-a-plugin.md  realtime-playback.md  sample-accurate-automation.md  save-and-restore-state.md  send-midi.md
docs/internal/: README.md  asan-lsan-com-ref-leak-issue.md  developer-onboarding.md  development-workflow.md  roadmap.md  vision.md
docs/internal/archive/: incomplete.md
docs/internal/archive/old-crate-docs/: README.md  quick-reference.md  troubleshooting.md
docs/internal/archive/old-tutorials/tutorials/: 01-first-host.md  01-your-first-vst3-host.md  03-building-simple-plugin-host.md  04-advanced-features.md  05-production-ready-host.md
docs/internal/plans/: 2026-06-19-host-context-and-crate-readiness.md  2026-06-20-functional-gaps-exploration.md  2026-06-21-feature-roadmap.md  2026-06-23-rt-zero-alloc.md  2026-06-23-timeline-engine.md  2026-06-24-rt-lock-free-runner.md
docs/internal/vst3-notes/: analysis.md  fixes-implemented.md  fixes-summary.md  implementation-analysis.md  linux-window-support.md  module-factory.md  sdk-architecture.md
docs/reference/: api-overview.md  compatibility.md  feature-flags.md  platform-support.md
docs/tutorials/: build-a-mini-host.md  getting-started.md
examples/: library_api_preview.rs
scripts/: bundle-test-plugin.sh
src/: audio_processing.rs  com_implementations.rs  crash_protection.rs  data_structures.rs  errors.rs  lib.rs  main.rs  main.rs.backup  plugin_discovery.rs  plugin_host_process.rs  plugin_loader.rs  utils.rs
test-plugin/: Cargo.toml
test-plugin/src/: lib.rs
vst3-host/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  run_plugin_gui.sh
vst3-host/docs/tutorials/: 02-processing-audio.md
vst3-host/examples/: basic_host.rs  compatibility_matrix.rs  debug_loader.rs  eframe_handle_spike.rs  embedded_editor.rs  host.rs  isolated_gui.rs  isolated_host.rs  midi_keyboard.rs  parameter_automation.rs  play_synth.rs  plugin_gui.rs  plugin_scanner.rs  test_loading.rs  trance_timeline_demo.rs  trance_timeline_gui.rs
vst3-host/examples/assets/: carte-blanche.mid  helgewave-anthem.mid  moon-loves-the-sun.mid  slyder-score.mid
vst3-host/examples/dsp/: mod.rs
vst3-host/src/: api_simplification.rs  audio.rs  audio_processing.rs  com_implementations.rs  discovery.rs  embed.rs  error.rs  error_improvements.rs  host.rs  lib.rs  midi.rs  midi_input.rs  parameters.rs  playback.rs  plugin.rs  process_isolation.rs  realtime.rs  simple.rs  stream.rs  transport.rs  window.rs
vst3-host/src/backends/: cpal_backend.rs  mod.rs
vst3-host/src/internal/: com_implementations.rs  denormal.rs  isolated_plugin_impl.rs  mod.rs  objc_conflict_resolver.rs  plugin_impl.rs  process_isolation.rs  utils.rs
vst3-host/src/internal/module_loader/: linux.rs  macos.rs  mod.rs  private_namespace.rs  windows.rs
vst3-host/tests/: alloc_tests.rs  audio_tests.rs  discovery_tests.rs  feature_coverage_tests.rs  host_tests.rs  integration_tests.rs  midi_tests.rs  parameter_tests.rs  timeline_tests.rs
vst3-inspector/: Cargo.toml
vst3-inspector/src/: audio_processing.rs  automation.rs  com_implementations.rs  crash_protection.rs  data_structures.rs  main.rs  midi_input.rs  midi_player.rs  plugin_discovery.rs  plugin_host_process.rs
