[package]
name = "vst-host"
version = "0.1.0"
edition = "2021"

[dependencies]
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }

eframe = "0.31.1"
vst3 = "0.1.2"
libloading = "0.8.8"
egui_extras = "0.31.1"
cpal = "0.16.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rfd = "0.15"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
cocoa = "0.26.0"
objc = "0.2.6"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "libloaderapi",
    "processenv",
    "winbase",
    "handleapi",
    "errhandlingapi"
] }