[package]
name = "vst3-host-testplug"
version = "0.0.0"
edition = "2021"
publish = false
description = "A tiny deterministic VST3 test synth (note expression + effect passthrough) for verifying vst3-host"

[lib]
# A VST3 plugin is a C dynamic library.
crate-type = ["cdylib"]

[dependencies]
vst3 = { workspace = true }
