[package]
name = "vst3-inspector"
version = "0.1.0"
edition = "2021"
authors = ["Helge Sverre <helge.sverre@gmail.com>"]
description = "A VST3 plugin inspector and testing application"
license = "MIT"
repository = "https://github.com/HelgeSverre/rust-vst3-host/"
# The inspector is a consumer app, not a published crate.
publish = false

[[bin]]
name = "vst3-inspector"
path = "src/main.rs"

[dependencies]
vst3-host = { path = "../vst3-host", features = ["cpal-backend"] }
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }
eframe = "0.31.1"
egui_extras = "0.31.1"
serde = { workspace = true }
serde_json = { workspace = true }
directories = "6.0.0"
rfd = "0.17"